@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2014 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -32,10 +32,15 @@ import org.springframework.messaging.Message;
  * convey the destination to use for the reply. In that case, that destination
  * should take precedence.
  *
+ * <p>The annotation may also be placed at class-level if the provider supports
+ * it to indicate that all related methods should use this destination if none
+ * is specified otherwise.
+ *
  * @author Rossen Stoyanchev
+ * @author Stephane Nicoll
  * @since 4.0
  */
-@Target(ElementType.METHOD)
+@Target({ElementType.METHOD, ElementType.TYPE})
 @Retention(RetentionPolicy.RUNTIME)
 @Documented
 public @interface SendTo {
